--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+    />
     <title>React Drum Machine</title>
   </head>
 
@@ -16,5 +19,13 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <footer>
+      Coded with <i class="fas fa-heart"></i> by
+      <form action="https://github.com/ezzep66" method="GET">
+        <button class="btn">
+          Ezequiel
+        </button>
+      </form>
+    </footer>
   </body>
 </html>
