--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <div id="root"></div>
     <footer>
       Coded with <i class="fas fa-heart"></i> by
-      <form action="https://github.com/ezzep66" method="GET">
+      <form action="https://github.com/EzequielCaste" method="GET">
         <button class="btn">
           Ezequiel
         </button>
